src/test/deca/context/invalid/created/double-decl.deca
//Description:
//    double decl
//
// Resultats:
//    double decl
// 
// Historique:
//    cree le 01/01/2022
{
    int a;
    int a;
}